--- a/core/config.json
+++ b/core/config.json
@@ -1,23 +1,21 @@
 {
-"verbose":"No",
-"use banner":"No",
-"save report":"No",
-"save report index": "No",
+"verbose":"no",
+"use banner":"no",
+"save report":"no",
+"save report index": "no",
 "operations": [
 	{
-		"subdomains":"Yes",
-		"sitemap crawl":"Yes",
-		"robots.txt scan":"Yes",
-		"seclist subdomain":"Yes",
-		"cms detection":"Yes",
-		"subdirectory bruteforce based on cms":"Yes",
-		"whois domain":"Yes",
-		"dns records":"Yes",
-		"mx validity":"Yes",
-		"wayback or archive":"Yes",
-		"IP resolve":"Yes",
-		"geoINT":"Yes",
-		"blacklist or phishing":"Yes"
-	}
+		"subdirectory":"yes",
+		"seclist subdomain":"no",
+		"whichcms":"yes",
+		"subdirectory_bruteforce":"no",
+		"whois":"yes",
+		"dnsrecord":"yes",
+		"checkdomain":"yes",
+		"wayback or archive":"yes",
+		"dnsrecord":"yes",
+		"geoip":"yes",
+		"blacklistcheck":"no"
+		}
 	]
 }
